crates/keron-lang/tests/corpus/errors/check/fn_required_after_default.keron
fn f(a: Int = 0, b: Int): Int {
  a + b
}
